--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1.0, width=device-width">
+        <link rel="stylesheet" href="css/fonts.css">
         <title>Loco - главная страница</title>
     </head>
     <body>
 
         <header class="header">
-            <a class="header__logo  header__logo_link" href="#">
+            <a class="header__logo-link" href="#">
                 <img class="header__logo" src="img/logo.jpg" width="98px" height="37px" alt="Логотип LOCO">
             </a>
             <a class="header__lang-switcher" href="#" title="Выбрать язык">RU</a>
