Внесла правки по первому этажу

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="header__logo-wrap">
                 <a class="header__logo-link" href="#">
                     <picture class="header__logo">
-                        <source media="(min-width: 768px)" srcset="img/logo.svg">
+                        <source media="(min-width: 992px)" srcset="img/logo.svg">
                         <img src="img/logo-mob.svg" alt="Логотип LOCO">
                     </picture>
                 </a>
@@ -54,17 +54,17 @@
                     <ul class="collection__social-list  social">
                         <li class="social__item">
                             <a class="social__link" href="#">
-                                <img class="social__link-instagram" src="img/instagram.png" width="43" height="43" alt="Мы в Instagram">
+                                <img class="social__link-instagram" src="img/instagram.svg" width="43" height="43" alt="Мы в Instagram">
                             </a>
                         </li>
                         <li class="social__item">
                             <a class="social__link" href="#">
-                                <img class="social__link-vkontakte" src="img/VK.png" width="43" height="43" alt="Мы ВКонтакте">
+                                <img class="social__link-vkontakte" src="img/VK.svg" width="43" height="43" alt="Мы ВКонтакте">
                             </a>
                         </li>
                         <li class="social__item">
                             <a class="social__link" href="#">
-                                <img class="social__link-facebook" src="img/FB.png" width="43" height="43" alt="Мы в Facebook">
+                                <img class="social__link-facebook" src="img/FB.svg" width="43" height="43" alt="Мы в Facebook">
                             </a>
                         </li>
                     </ul>
