--- a/index.html
+++ b/index.html
@@ -72,30 +72,35 @@
             </section>
 
             <section class="popular-item">
-                <a class="popular-item__link" href="#" title="Перейти на страницу товара">
-                    <img class="popular-item__img  popular-item__img_small" src="img/white-bag.png" alt="Кожаный клатч белый">
-                    <img class="popular-item__img  popular-item__img_big" src="img/pink-bag.png" alt="Кожаный клатч розовый">
-                </a>
+                <div class="popular-item__img-wrap">
+                    <picture class="popular-item__img">
+                        <source media="(min-width: 768px)" srcset="img/bags.png" alt="Кожаный клатч">
+                        <img src="img/pink-bag-mob.png" alt="Кожаный клатч">
+                    </picture>
+                </div>
                 <div class="popular-item__wrap">
                     <h2 class="popular-item__title  title">Кожаный клатч</h2>
                     <h3 class="popular-item__subtitle  subtitle">Осенняя коллекция</h3>
                     <p class="popular-item__desription  desription">Бесплатная доставка включена. Предложение действует на сайте loco.com и в магазинах до 18.09.2018. Для получения скидки в магазинах предъявите скриншот данного предложения. В магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</p>
                     <form class="popular-item__form  form" action="/" method="post">
-                        <fieldset class="form__colors">
-                            <label class="form__colors-item">
-                                <input class="form__colors-btn" alt="Выбрать серый цвет" type="radio" tabindex="1">
-                            </label>
-                            <label class="form__colors-item">
-                                <input class="form__colors-btn" alt="Выбрать розовый цвет" type="radio" tabindex="2" checked>
-                            </label>
-                            <label class="form__colors-item">
-                                <input class="form__colors-btn" alt="Выбрать голубой цвет" type="radio" tabindex="3">
-                            </label>
-                            <label class="form__colors-item">
-                                <input class="form__colors-btn" alt="Выбрать зеленый цвет" type="radio" tabindex="4">
-                            </label>
-                        </fieldset>
-                        <p class="form__price">1990₽</p>
+                        <div class="form__colors-and-price">
+                            <fieldset class="form__colors">
+                                <input class="form__colors-btn" alt="Выбрать серый цвет" type="radio" name="colors" tabindex="1" id="gray">
+                                <label class="form__colors-item" for="gray"></label>
+
+                                <input class="form__colors-btn" alt="Выбрать розовый цвет" type="radio" name="colors" tabindex="2" id="pink" checked>
+                                <label class="form__colors-item" for="pink"></label>
+
+                                <input class="form__colors-btn" alt="Выбрать голубой цвет" type="radio" name="colors" tabindex="3" id="blue">
+                                <label class="form__colors-item" for="blue"></label>
+
+                                <input class="form__colors-btn" alt="Выбрать зеленый цвет" type="radio" name="colors" tabindex="4" id="green">
+                                <label class="form__colors-item" for="green"></label>
+                            </fieldset>
+
+                            <p class="form__price">1990₽</p>
+                        </div>
+
                         <fieldset class="form__cart">
                             <div class="form__cart-item  quantity  button">
                                 <input type="hidden" name="quantity-choose" value="1" tabindex="5">
@@ -103,7 +108,7 @@
                                 <span class="quantity__value">1</span>
                                 <button class="quantity__more">+</button>
                             </div>
-                            <button class="form__item-add  button">Добавить в корзину</button>
+                            <div class="form__item-add  button">Добавить в корзину</div>
                         </fieldset>
                     </form>
                 </div>
@@ -113,12 +118,19 @@
             </section>
 
             <section class="look">
-                <img class="look__img" src="img/total-look.png" alt="Фото Serene Total Look">
-                <div>
-                    <h2 class="look__title  title">Serene Total Look</h2>
-                    <h3 class="look__subtitle  subtitle">Осенняя коллекция</h3>
-                    <p class="look__desription  desription">Джинсы, свитер, обувь.<br>
-                    В комплект также входит пакет ароматного чая и кружка.</p>
+                <div class="look__img-wrap">
+                    <picture class="look__img">
+                        <source media="(min-width: 768px)" srcset="img/total-look.png" alt="Фото Serene Total Look">
+                        <img src="img/total-look-mob.png" alt="Фото Serene Total Look">
+                    </picture>
+                </div>
+                <div class="look-wrap">
+                    <div class="look__text">
+                        <h2 class="look__title  title">Serene Total Look</h2>
+                        <h3 class="look__subtitle  subtitle">Осенняя коллекция</h3>
+                        <p class="look__desription  desription">Джинсы, свитер, обувь.<br>
+                        В комплект также входит пакет ароматного чая и кружка.</p>
+                    </div>
                     <form class="look__form  form" action="/" method="post">
                         <fieldset class="form__cart">
                             <div class="form__cart-item  quantity  button">
@@ -127,22 +139,21 @@
                                 <span class="quantity__value">1</span>
                                 <button class="quantity__more">+</button>
                             </div>
-                            <button class="form__item-add  button">Добавить в корзину</button>
+                            <div class="form__item-add  button">Добавить в корзину</div>
                         </fieldset>
                     </form>
                 </div>
                 <div class="look__another  another-items">
                     Другие товары на loco.com
                 </div>
+                <footer class="look__footer">
+                    <div class="look__footer-wrap">
+                        <address class="look__footer-developed">Разработано в 
+                            <img class="look__footer-logo" src="img/logo-whs.svg" alt="Логотип Web Hero School">
+                        </address>
+                    </div>
+                </footer>
             </section>
         </main>
-
-        <footer class="footer">
-            <div class="footer__wrap">
-                <address class="footer__developed">Разработано в 
-                    <img class="footer__logo" src="img/logo-whs.svg" alt="Логотип Web Hero School">
-                </address>
-            </div>
-        </footer>
     </body>
 </html>
