Исправила указанные ошибки

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <p class="popular-item__desription  desription">Бесплатная доставка включена. Предложение действует на сайте loco.com и в магазинах до 18.09.2018. Для получения скидки в магазинах предъявите скриншот данного предложения. В магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</p>
                     <form class="popular-item__form  form" action="/" method="post">
                         <div class="form__colors-and-price">
-                            <fieldset class="form__colors">
+                            <div class="form__colors">
                                 <input class="form__colors-btn" alt="Выбрать серый цвет" type="radio" name="colors" tabindex="1" id="gray">
                                 <label class="form__colors-item" for="gray"></label>
 
@@ -96,12 +96,12 @@
 
                                 <input class="form__colors-btn" alt="Выбрать зеленый цвет" type="radio" name="colors" tabindex="4" id="green">
                                 <label class="form__colors-item" for="green"></label>
-                            </fieldset>
+                            </div>
 
                             <p class="form__price">1990₽</p>
                         </div>
 
-                        <fieldset class="form__cart">
+                        <div class="form__cart">
                             <div class="form__cart-item  quantity  button">
                                 <input type="hidden" name="quantity-choose" value="1" tabindex="5">
                                 <button class="quantity__less">-</button>
@@ -109,7 +109,7 @@
                                 <button class="quantity__more">+</button>
                             </div>
                             <div class="form__item-add  button">Добавить в корзину</div>
-                        </fieldset>
+                        </div>
                     </form>
                 </div>
                 <div class="popular-item__another  another-items">
@@ -132,7 +132,7 @@
                         В комплект также входит пакет ароматного чая и кружка.</p>
                     </div>
                     <form class="look__form  form" action="/" method="post">
-                        <fieldset class="form__cart">
+                        <div class="form__cart">
                             <div class="form__cart-item  quantity  button">
                                 <input type="hidden" name="quantity-choose" value="1" tabindex="6">
                                 <button class="quantity__less">-</button>
@@ -140,7 +140,7 @@
                                 <button class="quantity__more">+</button>
                             </div>
                             <div class="form__item-add  button">Добавить в корзину</div>
-                        </fieldset>
+                        </div>
                     </form>
                 </div>
                 <div class="look__another  another-items">
